--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="be.vives.gamesitor">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name="Logging.GameSitor"
+        android:name="Logging.Logging"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
