--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,14 +84,16 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     //Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
 
     // Room and Lifecycle dependencies
     implementation "androidx.room:room-runtime:2.3.0-alpha03"
     kapt "androidx.room:room-compiler:2.3.0-alpha03"
     implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
-
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$version_room"
 
