--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
 
     //Testing!
     testImplementation 'junit:junit:4.13.1'
@@ -114,4 +115,6 @@ dependencies {
 
     //MultilayeredJson support
     implementation 'com.android.support:multidex:1.0.3'
+//gson converting for mapping in Room
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
