--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,7 +119,15 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
     //MultilayeredJson support
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
 //gson converting for mapping in Room
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
 }
