--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,8 @@ dependencies {
 //gson converting for mapping in Room
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
