made all fragments work with Repository started to implement all mapping from db to domain models !
this all happens on the hand of observers. because of to much nesting from classes

example : stage { -> reward (has item in it , item has effects), -> Character(has Equipment(has list of items with again each item an list of effects),stats, etc }

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,11 +82,13 @@ dependencies {
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
     // Core with Ktx
     implementation "androidx.core:core-ktx:$version_core"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    //Logging
+    //SitorApplication
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     //Navigation
